# omni-sdk

./: .gitignore  .gitmodules  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  sources.list
examples/console/console_uart/: CMakeLists.txt  README.md  prj.conf
examples/debug/ram_boot/: CMakeLists.txt  README.md
examples/debug/ram_boot/mdk/: clean.bat  stm32f407.uvoptx  stm32f407.uvprojx
examples/debug/ram_debug/: CMakeLists.txt  README.md
examples/debug/segger_hardfault_handler/: CMakeLists.txt  README.md  prj.conf
examples/debug/segger_hardfault_handler/application/: main.c
examples/debug/segger_hardfault_handler/omni/stm32f407ig/device/: omni_device.h
examples/debug/segger_rtt/: CMakeLists.txt  README.md
examples/i2c/i2c_eeprom/: CMakeLists.txt  README.md  prj.conf
examples/lua/lua_template/: CMakeLists.txt  README.md  prj.conf
examples/rtos/cmsis_freertos/: CMakeLists.txt  README.md  prj.conf
examples/rtos/cmsis_rtx/: CMakeLists.txt  README.md  prj.conf
examples/spi/spi_flash/: CMakeLists.txt  README.md  prj.conf
examples/template/template_cubemx/: CMakeLists.txt  README.md
examples/template/template_cubemx/application/: app.c  app.h
examples/template/template_cubemx/cmake/: driver.cmake
examples/template/template_cubemx/driver/: .mxproject  project.ioc
examples/template/template_cubemx/driver/Core/Src/: main.c
examples/template/template_omni/: CMakeLists.txt  prj.conf
examples/u8g2/u8g2_test/: CMakeLists.txt  README.md  prj.conf
examples/usart/usart_echo_bot/: CMakeLists.txt  README.md  prj.conf
examples/usb/cherryusb/usbd_cdc_acm_hid/: CMakeLists.txt  README.md  prj.conf
examples/usb/cherryusb/usbd_cdc_acm_hid/application/: cdc_acm_hid.c  cdc_acm_hid.h  main.c
examples/usb/cherryusb/usbd_cdc_acm_hid/omni/stm32f407ig/device/: omni_device_cfg.h
omni/: CMakeLists.txt  Kconfig  omni-env.cmd  omni-env.sh  omni.h  omni_config.h
omni/cmsis/: CMakeLists.txt  README.md
omni/cmsis/cortex_m/: CMakeLists.txt
omni/components/: CMakeLists.txt  Kconfig
omni/components/cherryusb/: Kconfig  usb_device.c  usb_device.h
omni/components/console/: Kconfig  console.c  console.h  console_types.h
omni/components/include/: omni_component.h
omni/drivers/: CMakeLists.txt  Kconfig  init.c  omni_driver_cfg.in
omni/drivers/display/: Kconfig  Kconfig.ssd1306  ssd1306.c  ssd1306.h  ssd1306_types.h
omni/drivers/i2c/: Kconfig
omni/drivers/include/: omni_driver.h
omni/drivers/include/drivers/: clock.h  gpio.h  gpio_types.h  i2c.h  i2c_types.h  init.h  spi.h  spi_types.h  timer.h  timer_types.h  usart.h  usart_types.h  usb_phy.h  usb_phy_types.h
omni/drivers/include/ipc/: ring_buffer.h
omni/drivers/ipc/: Kconfig  ring_buffer.c
omni/drivers/spi/: Kconfig
omni/drivers/timer/: Kconfig
omni/drivers/usart/: Kconfig
omni/drivers/usb/: Kconfig
omni/include/: assert.h  device.h  toolchain.h  util.h
omni/libraries/: CMakeLists.txt  Kconfig
omni/share/omni-package/cmake/: omni-config.cmake
omni/targets/: CMakeLists.txt  Kconfig
omni/targets/apm/: CMakeLists.txt
omni/targets/apm/apm32f4/: CMakeLists.txt  omni_device_cfg.in  omni_target.h
omni/targets/apm/apm32f4/apm32f407xx/toolchain/: startup_apm32f407xx.c
omni/targets/apm/apm32f4/apm32f407xx/toolchain/gcc/: apm32f407xg_flash.ld
omni/targets/apm/apm32f4/cmake/: apm32dalf4_fw.cmake  apm32f407xx.cmake
omni/targets/apm/apm32f4/drivers/include/ll/: irq_ll.h
omni/targets/apm/hal/: clock_hal.c  dma_hal.c  dma_hal.h  dwt_hal.c  dwt_hal.h  gpio_hal.c  gpio_hal.h  irq_hal.c  soc.c  sysmem.c
omni/targets/stm/: CMakeLists.txt  omni_target.h
omni/targets/stm/hal/: clock_hal.c  dma_hal.c  gpio_hal.c  gpio_hal.h  i2c_hal.c  irq_hal.h  soc.c  spi_hal.c  timer_hal.c  usart_hal.c  usart_hal_v2.c  usb_phy_hal.c  usb_phy_hal.h
omni/targets/stm/stm32f1/: CMakeLists.txt  omni_device_cfg.in  omni_target.h
omni/targets/stm/stm32f1/cmake/: stm32cubef1_fw.cmake  stm32f103xx.cmake
omni/targets/stm/stm32f1/drivers/: i2c_ll.c  usart_ll.c
omni/targets/stm/stm32f1/drivers/include/ll/: gpio_ll.h  i2c_ll.h  irq_ll.h
omni/targets/stm/stm32f1/stm32f103xx/toolchain/: startup_stm32f103xx.c
omni/targets/stm/stm32f1/stm32f103xx/toolchain/gcc/: stm32f103cbtx_flash.ld
omni/targets/stm/stm32f4/: CMakeLists.txt  omni_device_cfg.in  omni_target.h
omni/targets/stm/stm32f4/cmake/: stm32cubef4_fw.cmake  stm32f405xx.cmake  stm32f407xx.cmake  stm32f411xx.cmake
omni/targets/stm/stm32f4/drivers/: i2c_ll.c  spi_ll.c  usb_ll.c
omni/targets/stm/stm32f4/drivers/include/ll/: irq_ll.h  usb_ll.h
omni/targets/stm/stm32f4/stm32f405xx/toolchain/: startup_stm32f405xx.c
omni/targets/stm/stm32f4/stm32f405xx/toolchain/gcc/: stm32f405xg_flash.ld
omni/targets/stm/stm32f4/stm32f407xx/toolchain/: startup_stm32f407xx.c
omni/targets/stm/stm32f4/stm32f407xx/toolchain/arm/: stm32f407xg_flash.sct
omni/targets/stm/stm32f4/stm32f411xx/toolchain/: startup_stm32f411xx.c
omni/targets/stm/stm32f4/stm32f411xx/toolchain/gcc/: stm32f411xe_flash.ld
omni/targets/stm/stm32h7/: CMakeLists.txt  omni_device_cfg.in  omni_target.h
omni/targets/stm/stm32h7/cmake/: stm32cubeh7_fw.cmake  stm32h743xx.cmake  stm32h750xx.cmake
omni/targets/stm/stm32h7/drivers/: spi_ll.c  usart_ll.c  usb_ll.c
omni/targets/stm/stm32h7/drivers/include/ll/: irq_ll.h  spi_ll.h  usart_ll.h
omni/targets/stm/stm32h7/stm32h743xx/toolchain/: startup_stm32h743xx.c
omni/targets/stm/stm32h7/stm32h743xx/toolchain/arm/: stm32h743ii_flash.sct
omni/targets/stm/stm32h7/stm32h743xx/toolchain/gcc/: stm32h743iitx_flash.ld
omni/targets/stm/stm32h7/stm32h750xx/toolchain/: startup_stm32h750xx.c
omni/targets/stm/stm32h7/stm32h750xx/toolchain/arm/: stm32h750xb_flash.sct
omni/targets/stm/stm32h7/stm32h750xx/toolchain/gcc/: stm32h750xb_flash.ld
omni/targets/svd/: stm32f407xx.svd
omni/tools/cmake/: add_custom_command.cmake  config_board_info.cmake  omni_config_scripts.cmake  utils.cmake
omni/tools/python/: clear_old_kconfig.py  convert_kconfig_to_cmake.py  run_menuconfig.py  update_omni_kconfig_h.py
(+75 files in other folders)
